Use jakarta annotations